--- a/westminster-catechism/index.html
+++ b/westminster-catechism/index.html
@@ -136,13 +136,17 @@
           </div>
           <div class="about-featured-video-text">
             <span class="about-featured-badge">🎬 MUST WATCH</span>
-            <h3>웨스트민스터 소요리문답 제1문</h3>
-            <p>사람의 제일 되는 목적은 무엇입니까?<br>
-              하나님을 영화롭게 하고 영원토록 그를 즐거워하는 것입니다.<br>
-              웨민소 시리즈가 전하는 제1문의 핵심 내용을 확인해보세요.
+            <h3 class="about-featured-title">소요리문답을 꼭 알아야 하는 이유</h3>
+            <p class="about-featured-description">
+              웨스트민스터 소요리문답은 기독교 신앙의 핵심 교리를 체계적으로 요약한 신앙의 표준입니다.
+              최금남 목사님은 이를 통해 성경 전체를 바르게 이해하고, 막연했던 신앙에서 벗어나
+              하나님을 영화롭게 하는 삶의 목적을 명확히 세울 수 있다고 강조합니다.<br /><br />
+              신앙의 기초를 튼튼히 다지고 참된 은혜의 길로 나아가기 위한 필수 지침서,
+              지금 영상으로 확인해보세요.
             </p>
             <a href="https://youtu.be/iqHe2XRPTgo" target="_blank" rel="noopener" class="about-featured-watch-btn">
               <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+
                 <polygon points="5 3 19 12 5 21 5 3"></polygon>
               </svg>
               YouTube에서 보기
