--- a/westminster-catechism/westminster-catechism/index.html
+++ b/westminster-catechism/westminster-catechism/index.html
@@ -337,7 +337,7 @@
           <button class="filter-tag" data-filter="37-38">종말론</button>
           <button class="filter-tag" data-filter="39-44">도덕법</button>
           <button class="filter-tag" data-filter="45-81">십계명</button>
-          <button class="filter-tag" data-filter="82-84">죄와 보응</button>
+          <button class="filter-tag" data-filter="82-87">죄와 보응 및 회개</button>
           <button class="filter-tag" data-filter="88-99">은혜의 방편</button>
           <button class="filter-tag" data-filter="100-107">주기도문</button>
         </div>
@@ -440,77 +440,77 @@
       </div>
       <div class="structure-grid">
         <!-- Item 1 -->
-        <div class="structure-card" data-animate="fade-up" data-delay="100">
+        <div class="structure-card" data-animate="fade-up" data-delay="100" onclick="scrollToFilter('1-3')">
           <div class="struct-num">01</div>
           <h3 data-i18n="struct1Title">성경</h3>
           <p class="struct-range" data-i18n="struct1Range">제1-3문</p>
           <span class="struct-badge" data-i18n="struct1Badge">서론</span>
         </div>
         <!-- Item 2 -->
-        <div class="structure-card" data-animate="fade-up" data-delay="150">
+        <div class="structure-card" data-animate="fade-up" data-delay="150" onclick="scrollToFilter('4-12')">
           <div class="struct-num">02</div>
           <h3 data-i18n="struct2Title">하나님론</h3>
           <p class="struct-range" data-i18n="struct2Range">제4-12문</p>
           <span class="struct-badge" data-i18n="struct2Badge">신론</span>
         </div>
         <!-- Item 3 -->
-        <div class="structure-card" data-animate="fade-up" data-delay="200">
+        <div class="structure-card" data-animate="fade-up" data-delay="200" onclick="scrollToFilter('13-19')">
           <div class="struct-num">03</div>
           <h3 data-i18n="struct3Title">인간론</h3>
           <p class="struct-range" data-i18n="struct3Range">제13-19문</p>
           <span class="struct-badge" data-i18n="struct3Badge">인간론</span>
         </div>
         <!-- Item 4 -->
-        <div class="structure-card" data-animate="fade-up" data-delay="250">
+        <div class="structure-card" data-animate="fade-up" data-delay="250" onclick="scrollToFilter('20-28')">
           <div class="struct-num">04</div>
           <h3 data-i18n="struct4Title">기독론</h3>
           <p class="struct-range" data-i18n="struct4Range">제20-28문</p>
           <span class="struct-badge" data-i18n="struct4Badge">기독론</span>
         </div>
         <!-- Item 5 -->
-        <div class="structure-card" data-animate="fade-up" data-delay="300">
+        <div class="structure-card" data-animate="fade-up" data-delay="300" onclick="scrollToFilter('29-36')">
           <div class="struct-num">05</div>
           <h3 data-i18n="struct5Title">구원론</h3>
           <p class="struct-range" data-i18n="struct5Range">제29-36문</p>
           <span class="struct-badge" data-i18n="struct5Badge">구원론</span>
         </div>
         <!-- Item 6 -->
-        <div class="structure-card" data-animate="fade-up" data-delay="350">
+        <div class="structure-card" data-animate="fade-up" data-delay="350" onclick="scrollToFilter('37-38')">
           <div class="struct-num">06</div>
           <h3 data-i18n="struct6Title">종말론</h3>
           <p class="struct-range" data-i18n="struct6Range">제37-38문</p>
           <span class="struct-badge" data-i18n="struct6Badge">종말론</span>
         </div>
         <!-- Item 7 -->
-        <div class="structure-card" data-animate="fade-up" data-delay="400">
+        <div class="structure-card" data-animate="fade-up" data-delay="400" onclick="scrollToFilter('39-44')">
           <div class="struct-num">07</div>
           <h3 data-i18n="struct7Title">도덕법</h3>
           <p class="struct-range" data-i18n="struct7Range">제39-44문</p>
           <span class="struct-badge" data-i18n="struct7Badge">도덕법</span>
         </div>
         <!-- Item 8 -->
-        <div class="structure-card" data-animate="fade-up" data-delay="450">
+        <div class="structure-card" data-animate="fade-up" data-delay="450" onclick="scrollToFilter('45-81')">
           <div class="struct-num">08</div>
           <h3 data-i18n="struct8Title">십계명</h3>
           <p class="struct-range" data-i18n="struct8Range">제45-81문</p>
           <span class="struct-badge" data-i18n="struct8Badge">십계명</span>
         </div>
         <!-- Item 9 -->
-        <div class="structure-card" data-animate="fade-up" data-delay="500">
+        <div class="structure-card" data-animate="fade-up" data-delay="500" onclick="scrollToFilter('82-87')">
           <div class="struct-num">09</div>
-          <h3 data-i18n="struct9Title">죄와 보응</h3>
-          <p class="struct-range" data-i18n="struct9Range">제82-84문</p>
-          <span class="struct-badge" data-i18n="struct9Badge">죄론</span>
+          <h3 data-i18n="struct9Title">죄와 보응 및 회개</h3>
+          <p class="struct-range" data-i18n="struct9Range">제82-87문</p>
+          <span class="struct-badge" data-i18n="struct9Badge">죄와 보응</span>
         </div>
         <!-- Item 10 -->
-        <div class="structure-card" data-animate="fade-up" data-delay="550">
+        <div class="structure-card" data-animate="fade-up" data-delay="550" onclick="scrollToFilter('88-99')">
           <div class="struct-num">10</div>
           <h3 data-i18n="struct10Title">은혜의 방편</h3>
           <p class="struct-range" data-i18n="struct10Range">제88-99문</p>
           <span class="struct-badge" data-i18n="struct10Badge">은혜론</span>
         </div>
         <!-- Item 11 -->
-        <div class="structure-card" data-animate="fade-up" data-delay="600">
+        <div class="structure-card" data-animate="fade-up" data-delay="600" onclick="scrollToFilter('100-107')">
           <div class="struct-num">11</div>
           <h3 data-i18n="struct11Title">주기도문</h3>
           <p class="struct-range" data-i18n="struct11Range">제100-107문</p>
@@ -696,8 +696,8 @@
     </svg>
   </button>
 
-  <script src="data.js?v=10"></script>
-  <script src="app.js?v=10"></script>
+  <script src="data.js?v=11"></script>
+  <script src="app.js?v=11"></script>
 
   <!-- Image Modal -->
   <div class="image-modal" id="imageModal">
